# monitored_subprocess

./: README.org  monitored_subprocess.py  pyproject.toml
monitored_subprocess/: __init__.py  monitored_subprocess.py
